force-app/main/default/objects/WorkOrder/fields/Labor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Labor_Amount__c</fullName>
    <label>Labor Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>