force-app/main/default/objects/WorkOrder/fields/Parts_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parts_Amount__c</fullName>
    <label>Parts Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>